objects/Saved_Notes_Search__c.object
<CustomObject>
    <description>Saved search criteria from the consolidated notes component on a financial account. User searches are saved and can be promoted to profile-level visibility by editing these records.</description>
    <fields>
        <fullName>Globally_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manually maintained field to change record visibility for the search, checking the box shares the record as read-only with all internal users</description>
        <inlineHelpText>Check the box to make the record visible to everyone. Search will not be visible in consolidated notes until it is associated with profiles by the Profile Visibility field.</inlineHelpText>
        <label>Globally Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Visibility__c</fullName>
        <description>Manually maintained field to limit visibility of globally available searches by profile</description>
        <inlineHelpText>Assign profiles to which the search is visible</inlineHelpText>
        <label>Profile Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections Base</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Search_Criteria__c</fullName>
        <description>Any value that codifies the search criteria</description>
        <label>Search Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Saved Notes Search</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Globally_Available__c</columns>
        <columns>Profile_Visibility__c</columns>
        <columns>Search_Criteria__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved Notes Searches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>